manifests/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: $SERVICE_NAME
  labels:
    app: $SERVICE_NAME
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: $SERVICE_NAME
    spec:
      # initContainers:
      #   - name: volume-mount-set-permissions
      #     image: busybox
      #     command: ["sh", "-c", "echo 'define( \"WP_ALLOW_MULTISITE\", true );' >> /var/www/html/wp-config.php"]
      #     volumeMounts:
      #     - name: wordpress-local-storage
      #       mountPath: /var/www/html        
      containers:
        - image: wordpress:latest
          name: wordpress
          resources:
            limits: 
              cpu: 100m
              memory: 256Mi
          ports:
            - containerPort: 80
              name: wordpress
          volumeMounts:
            - name: config-volume
              mountPath: /usr/local/etc/php/conf.d/uploads.ini
              subPath: uploads.ini
            - name: wordpress-local-storage
              mountPath: /var/www/html
      volumes:
        - name: wordpress-local-storage
          persistentVolumeClaim:
            claimName: $SERVICE_NAME-volume
        - name: config-volume
          configMap:
            name: wordpress-config
