manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wordpress
  name: wordpress
spec:
  # type: NodePort
  ports:
  - port: 80
    # targetPort: 80
    # name: www
    # protocol: TCP
  selector:
    app: wordpress
