manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: $DOMAIN
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # type of authentication
    #nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    #nginx.ingress.kubernetes.io/auth-secret: nginx-ingress-basic-auth
    # message to display with an appropriate context why the authentication is required
    #nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - foo"
spec:
  tls:
  - hosts:
    - $DOMAIN
    secretName: tls-$DOMAIN
  rules:
  - host: $DOMAIN
    http:
      paths:
      - path: /
        backend:
          serviceName: $SERVICE_NAME
          servicePort: $SERVICE_PORT
